Replace Java app with new Web version